# colorid_bv

./: CITATION.CFF  Cargo.toml  README.md
paper/: paper.md
scripts/: process_LM_Pasteur_cgMLST.py  process_MLST.py
src/: batch_search_pe.rs  build.rs  kmer.rs  lib.rs  main.rs  perfect_search.rs  read_filter.rs  read_id_batch.rs  read_id_mt_pe.rs  reports.rs  seq.rs
