[package]
name = "colorid_bigvec"
version = "0.1.0"
authors = ["henk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.30.0"
fasthash = "0.3.2"
serde = "^1.0.89"
serde_json = "1.0.9"
bincode = "^1.1.2"
serde_derive = "1.0.89"
flate2 = "1.0.6"
indexmap = "1.0.0"
probability = "0.15.12"
rayon = "1.2.0"
fnv = "1.0.6"
systemstat = "0.1.3"
bv = "0.11.0"
itertools = "0.8.0"
bigsi_rs = "0.1.0"

[profile.release]
lto = true

[features]
default = ["bv/serde"]
