[package]
name = "colorid_bv"
version = "0.1.0"
authors = ["Henk den Bakker"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.30.0"
#fasthash = "0.3.2"
serde = "^1.0.89"
serde_json = "1.0.9"
bincode = "^1.1.2"
serde_derive = "1.0.89"
flate2 = { version = "^1.0.19", features = ["zlib"], default-features = false }
indexmap = "1.0.0"
probability = "0.15.12"
rayon = "1.10.0"
fnv = "1.0.6"
systemstat = "0.2.3"
bv = "0.11.0"
itertools = "0.8.0"
bigsi_rs = "0.1.1"
needletail = "^0.5.1"

[profile.release]
lto = true

[features]
default = ["bv/serde"]
